style(EditableText): prevent letter cut off

--- a/src/components/EditableText/_EditableText.scss
+++ b/src/components/EditableText/_EditableText.scss
@@ -55,6 +55,7 @@
     line-height: 1.15; // FIX: match the normalize.css for input.
 
     > span {
+      line-height: 1.15rem;
       white-space: nowrap;
       text-overflow: ellipsis;
       overflow: hidden;
